--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.15.0
   firebase_auth: ^5.6.0
   cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.0
 
   # Encryption + key storage
   flutter_secure_storage: ^9.2.4
