--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   # Ringtone and vibration
   vibration: ^2.0.1
   audioplayers: ^6.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
