--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,10 @@ dependencies:
   audioplayers: ^6.1.0
   intl: ^0.20.2
 
+  # Voice message recording
+  record: ^6.2.0
+  path_provider: ^2.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -78,6 +82,35 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  
+  # Native splash screen generator
+  flutter_native_splash: ^2.4.4
+
+# Flutter Native Splash Configuration
+flutter_native_splash:
+  # Background color - gradient-like effect with solid pink
+  color: "#FF4B6E"
+  
+  # Dark mode background - deep romantic dark
+  color_dark: "#1A1118"
+  
+  # Logo image - your custom splash logo
+  image: assets/splash/splash.png
+  image_dark: assets/splash/splash.png
+  
+  # Android 12+ adaptive icon settings
+  android_12:
+    color: "#FF4B6E"
+    color_dark: "#1A1118"
+    image: assets/splash/splash.png
+    image_dark: assets/splash/splash.png
+  
+  # Fullscreen mode for immersive experience
+  fullscreen: true
+  
+  # Web splash
+  web: true
+  web_image_mode: center
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -90,10 +123,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets
+  assets:
+    - assets/splash/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
