--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,15 +98,15 @@ flutter_native_splash:
   color_dark: "#1A1118"
   
   # Logo image - your custom splash logo
-  image: assets/splash/splash.jpeg
-  image_dark: assets/splash/splash.jpeg
+  image: assets/splash/splash.png
+  image_dark: assets/splash/splash.png
   
   # Android 12+ adaptive icon settings
   android_12:
     color: "#FF4B6E"
     color_dark: "#1A1118"
-    image: assets/splash/splash.jpeg
-    image_dark: assets/splash/splash.jpeg
+    image: assets/splash/splash.png
+    image_dark: assets/splash/splash.png
   
   # Fullscreen mode for immersive experience
   fullscreen: true
